# class

./: .gitattributes  .gitignore  AllocationTable.c  AllocationTable.h  AllocationTableList.c  AllocationTableList.h  CMakeLists.txt  CONTRIBUTING.md  Class1.c  Class1.h  Constructable.h  Destructable.h  LICENSE  Legacy_AllocationTable.c  Legacy_AllocationTable.h  Legacy_AllocationTableList.c  Legacy_AllocationTableList.h  Legacy_List.c  Legacy_List.h  Legacy_Node.c  List.c  List.h  Node.c  Node.h  ObjectBase.c  ObjectBase.h  Quote.h  README.md  TODO.txt  build-lib-cleanup.bat  build-lib.bat  build-lib.sh  build-library.sh  build-main.bat  build-main.sh  build-main.sh.orig  build-test.bat  build-test.sh  build.sh  chmod-all-sh-files.sh  (+18 more)
.github/workflows/: build.yml  release.yml
docs/: DefineYourOwnObject.md  GCCDeveloping.md  GCCIntroduction.md  GCCUsage.md  MSVCDeveloping.md  MSVCIntroduction.md  MSVCUsage.md  Release.md  ReleaseLocally.md
src/: Circle.c  Circle.h  CircleV2.c  CircleV2.h  CircleV3.c  CircleV3.h  CircleV4.c  CircleV4.h  CircleV5.c  CircleV5.h  ClassInheritor.c  ClassInheritor.h  main.c
src/Class/: Class.c  Class.h  Class.r  InvocationStatus.r  Legacy_AllocationTable.c  Legacy_AllocationTableList.c  Legacy_AllocationTableList.r  Legacy_List.c  Legacy_Node.c  ObjectBase.c  build-library.sh
src/LegacyClass/: AllocationTableList.h  AllocationTableList.r  Class1.c  Class1.h  Class1.r  Constructable.h  Destructable.h  LegacyClass.h  Legacy_AllocationTable.c  Legacy_AllocationTable.r  Legacy_List.c  Legacy_List.r  Legacy_Node.h  Legacy_Node.r  ObjectBase.c  ObjectBase.r  build-library.sh
src/main/: Circle.c  Circle.h  CircleV2.c  CircleV2.h  CircleV3.c  CircleV3.h  CircleV4.c  CircleV4.h  CircleV5.c  CircleV5.h  CircleV6.c  CircleV6.h  CircleV7.c  CircleV7.h  CircleV8.c  CircleV8.h  main.c
src/oop/: AutoDestructable.c  AutoDestructable.r  AutoDestructableV2.c  AutoDestructableV2.r  Legacy_AllocationTable.c  Legacy_AllocationTable.r  Legacy_AllocationTableList.c  Legacy_AllocationTableList.r  Legacy_AtomicFreer.c  Legacy_AtomicFreer.r  Legacy_List.c  Legacy_List.r  Legacy_Node.c  Legacy_Node.r  Legacy_Object.c  Legacy_Object.r  Legacy_ObjectContainer.r  Legacy_StringEntry.c  Legacy_StringEntry.r  Legacy_StringObjectContainerEntry.r  MemberList.c  MemberList.h  (+6 more)
(+128 files in other folders)
